[#84967206] - Improve Gulpfile with clean & watch.

--- a/src/jade/Index.jade
+++ b/src/jade/Index.jade
@@ -17,4 +17,4 @@ html(lang="en")
                 Jade is a terse and simple
                 templating language with a
                 strong focus on performance
-                and powerful features.
+                and powerful features..
