[#84965716] - Create basic web page - Link provided favicon.

--- a/src/jade/Index.jade
+++ b/src/jade/Index.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
     head
         title= Hangman
-
+        link(rel="shortcut icon" type="image/png" href="../assets/img/favicon.ico")
         meta(charset="utf-8")
         meta(name="viewport", content="width=device-width, initial-scale=1")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
