--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -25,6 +25,9 @@
 .text-align
   text-align: right
 
+.clickable
+  cursor:pointer;
+
 .wrapper
   background-color:#F5F5F5;
   border-radius: 10px;
@@ -51,7 +54,7 @@
   .animation-area
     background-color:white;
     border-radius: 10px;
-    height: 475px;
+    height: 525px;
     overflow: hidden;
 
     .img-container
@@ -59,7 +62,7 @@
       background-repeat: no-repeat;
       background-position: 0px -30px;
       height: 350px;
-      margin: 30px auto;
+      margin: 30px auto 10px;
       width: 200px;
 
     .word-area
@@ -77,6 +80,8 @@
         border-radius: 5px;
         border: 1px solid #999;
         height: 20px;
+        margin-top: 10px;
+        text-align: center;
 
       .padding-top
         padding-top: 10px;
